1 Eslint and prettier

--- a/my-first-next-app/.prettierrc.json
+++ b/my-first-next-app/.prettierrc.json
@@ -4,5 +4,26 @@
   "tabWidth": 2,
   "trailingComma": "es5",
   "printWidth": 80,
-  "plugins": ["prettier-plugin-tailwindcss"]
+  "plugins": [
+    "prettier-plugin-tailwindcss",
+    "@ianvs/prettier-plugin-sort-imports"
+  ],
+  "importOrder": [
+    "^react$",
+    "next",
+    "^next/(.*)$",
+    "^@core/(.*)$",
+    "",
+    "<THIRD_PARTY_MODULES>",
+    "",
+    "^@server/(.*)$",
+    "",
+    "^@ui/(.*)$",
+    "^@/(.*)$",
+    "",
+    "^[./]"
+  ],
+  "importOrderParserPlugins": ["typescript", "jsx", "decorators-legacy"],
+  "importOrderTypeScriptVersion": "5.0.0",
+  "importOrderCaseSensitive": false
 }
