--- a/my-first-next-app/package.json
+++ b/my-first-next-app/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@storybook/react": "^8.4.6",
+    "@testing-library/react": "^16.0.1",
     "chart.js": "^4.4.6",
     "next": "15.0.3",
     "react": "19.0.0-rc-66855b96-20241106",
@@ -18,6 +20,8 @@
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^4.4.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@types/jest": "^29.5.14",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
