--- a/my-first-next-app/package.json
+++ b/my-first-next-app/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@storybook/react": "^8.4.6",
     "@testing-library/react": "^16.0.1",
