--- a/my-second-next-app/package.json
+++ b/my-second-next-app/package.json
@@ -6,7 +6,10 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:ui": "vitest --ui"
   },
   "dependencies": {
     "next": "15.0.3",
@@ -21,6 +24,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@vitejs/plugin-react": "^4.3.4",
+    "@vitest/ui": "2.1.6",
     "eslint": "^8",
     "eslint-config-next": "15.0.3",
     "jsdom": "^25.0.1",
