--- a/my-first-next-app/package.json
+++ b/my-first-next-app/package.json
@@ -11,7 +11,7 @@
     "build-storybook": "storybook build",
     "test": "jest",
     "test:watch": "jest --watch",
-    "e2e:test": "cypress run"
+    "e2e:test": "concurrently \"npm run dev\" \"cypress run\""
   },
   "dependencies": {
     "@radix-ui/react-label": "^2.1.0",
@@ -45,6 +45,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "concurrently": "^9.1.0",
     "cypress": "^13.16.0",
     "eslint": "^8",
     "eslint-config-next": "15.0.3",
