--- a/my-third-next-app/package.json
+++ b/my-third-next-app/package.json
@@ -6,21 +6,37 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "bundlewatch": "bundlewatch"
   },
   "dependencies": {
+    "next": "15.0.3",
     "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
-    "next": "15.0.3"
+    "react-dom": "19.0.0-rc-66855b96-20241106"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "bundlewatch": "^0.4.0",
+    "eslint": "^8",
+    "eslint-config-next": "15.0.3",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "15.0.3"
+    "typescript": "^5"
+  },
+  "bundlewatch": {
+    "files": [
+      {
+        "path": ".next/static/chunks/**/*.js",
+        "maxSize": "100kB"
+      }
+    ],
+    "ci": {
+      "repoBranchBase": "master",
+      "trackBranches": [
+        "master"
+      ]
+    }
   }
 }
