--- a/my-third-next-app/package.json
+++ b/my-third-next-app/package.json
@@ -38,5 +38,10 @@
         "master"
       ]
     }
-  }
+  },
+  "size-limit": [
+    {
+      "path": ".next/static/chunks/**/*.js"
+    }
+  ]
 }
