--- a/my-third-next-app/package.json
+++ b/my-third-next-app/package.json
@@ -10,11 +10,19 @@
     "bundlewatch": "bundlewatch"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.5",
+    "@emotion/styled": "^11.13.5",
+    "@mui/material": "^6.1.9",
+    "chart.js": "^4.4.6",
+    "lodash": "^4.17.21",
+    "moment": "^2.30.1",
     "next": "15.0.3",
     "react": "19.0.0-rc-66855b96-20241106",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "19.0.0-rc-66855b96-20241106"
   },
   "devDependencies": {
+    "@types/lodash": "^4.17.13",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -28,7 +36,7 @@
   "bundlewatch": {
     "files": [
       {
-        "path": ".next/static/chunks/**/*.js",
+        "path": ".next/**/*.js",
         "maxSize": "100kB"
       }
     ],
@@ -41,7 +49,7 @@
   },
   "size-limit": [
     {
-      "path": ".next/static/chunks/**/*.js"
+      "path": ".next/**/*.js"
     }
   ]
 }
