--- a/my-third-next-app/package.json
+++ b/my-third-next-app/package.json
@@ -7,7 +7,10 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "bundlewatch": "bundlewatch"
+    "bundlewatch": "bundlewatch",
+    "prepare": "husky",
+    "test": "pnpm run test:bundle-check",
+    "test:bundle-check": "bundlewatch"
   },
   "dependencies": {
     "@emotion/react": "^11.13.5",
